--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body {
     min-height: 100vh;
     background: linear-gradient(to bottom, var(--pink-200), var(--pink-700));
 }
-header, main {
+header, main, footer {
     max-width: 1125px;
     margin: auto;
     background: var(--white);
@@ -105,6 +105,11 @@ main .home {
 
 /*Quiz*/
 
+
+
+.result_box {
+    display: none;
+}
 
 /*Contact*/
 
