--- a/css/style.css
+++ b/css/style.css
@@ -7,16 +7,23 @@
 }
 
 :root {
+    --pink-100: #f5d0c0;
     --pink-200: #F7966B;
     --pink-700: #F37B7D;
     --dark-blue: #25418A;
 
     --white: #f9f9f9;
+    --gray-900: #5D5D5D;
+    --black: #121212;
 }
 
 html {
     scroll-behavior: smooth;
 }
+
+:target {
+    scroll-margin-top: 4.7em;
+  }
 
 @media (max-width: 1080px) {
     html {
@@ -58,17 +65,24 @@ header, main, footer {
 section.home, 
 section.quiz, 
 section.contact {
-    padding: 2rem 0;
+    padding: 3rem 0;
 }
 
 section.home, section.contact {
-    min-height: 90vh;
-    background: #f5d0c0;
+    /* min-height: 90vh; */
+    background: var(--pink-100);
     color: #FFF;
 }
 
 section .title h2 {
-    font-size: 2rem;
+    font-size: 2.5rem;
+    color: var(--dark-blue);
+    margin-bottom: 0.7rem;
+}
+
+section .title p {
+    font-size: 1.3rem;
+    color: var(--gray-900);
 }
 
 /* ===== Header =====*/
@@ -81,8 +95,10 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 0.3rem 2rem;
     z-index: 999;
+
+    transition: all .3s ease;
 }
 
 header.header-active {
@@ -92,15 +108,8 @@ header.header-active {
     box-shadow: 0 .1rem .3rem rgba(0, 0, 0, .3);
 }
 
-header div.logo p {
-    font-size: 2rem;
-    font-weight: 500;
-    font-family: 'Neonderthaw', sans-serif;
-}
-
-header div.logo span {
-    color: var(--pink-200);
-    font-family: 'Neonderthaw', sans-serif;
+header div.logo img {
+    max-width: 12rem;
 }
 
 header nav {
@@ -111,6 +120,7 @@ header nav {
 }
 
 header nav .menu a {
+    font-size: 1.2rem;
     color: var(--pink-200);
     transition: all .2s ease;
 }
@@ -154,42 +164,241 @@ main {
 
 main .title {
     text-align: center;
+    margin-bottom: 1.5rem;
 }
 
-/*Home*/
+/*   Home  */
 main .home {
     margin-top: 4.75rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
 }
 
-/*Quiz*/
-.quiz .question_list .question .options label {
-    display: block;
-    border: 1px solid #CCC;
+.home .content {
+    display: flex;
+    align-items: center;
+    gap: 4rem;
+}
+
+.home .content .text {
+    width: 60%
+}
+
+.home .content .text h3 {
+    font-size: 1.7rem;
+    color: var(--dark-blue);
+    margin-bottom: 1rem;
+}
+
+.home .content .text p {
+    color: var(--black);
+    margin-bottom: 1.5rem;
+}
+
+.home .content .text a {
+    font-weight: 600;
+    font-size: 1.1rem;
     border-radius: 3px;
-    padding: 1rem;
+    border: 0;
+    background: var(--pink-700);
+    color: #fff;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+
+    display: flex;
+    align-items: center;
+    max-width: 10rem;
+    height: 3rem;
+
+    transition: all .3s ease;
+}
+
+.home .content .text a:hover {
+    transform: translateY(-7px);  
+}
+
+.home .content .text a i {
+    width: 30%;
+    height: 100%;
+    border-radius: 3px 0 0 3px;
+    background: var(--pink-200);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.home .content .text a span {
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.home .content .image {
+    width: 40%;
+}
+
+.home .content .image img {
+    width: 100%;
+}
+
+/*   Quiz   */
+main .quiz {
+    padding: 3rem 2rem;
+}
+
+.quiz .info_box {
+    max-width: 30rem;
+    margin: auto;
+    /* border: 1px solid var(--pink-700); */
+    border-radius: 3px;
+
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+
+    padding: 1.3rem;
+    margin-bottom: 1.3rem;
+}
+
+.quiz .info_box h3 {
+    color: var(--dark-blue);
+    font-size: 1.4rem;
     margin-bottom: 0.5rem;
 }
 
-.quiz .question_list .question .options label:hover {
+.quiz .info_box .info_list .info {
+    color: var(--black);
+}
+
+.quiz .info_box .info_list .info strong {
+    color: var(--pink-700);
+    font-size: 1.1rem;
+}
+
+.quiz .question_list {
+    
+}
+
+.quiz .question_list .question {
+
+}
+
+.quiz .question_list .question + .question {
+    margin-top: 1.5rem;
+}
+
+.quiz .question_list .question .question_description {
+    font-size: 1.1rem;
+    font-weight: 600;
+    display: block;
+    margin-bottom: 1rem;
+}
+
+
+/*   */
+
+.quiz .question_list .question .options {
+
+}
+
+.quiz .question_list .question .options .option {
+    border: 1px solid var(--pink-700);
+    border-radius: 5px;
+    padding: 0.8rem 1.5rem;
+    margin-bottom: 1.5rem;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+
     cursor: pointer;
+    transition: all 0.2s ease;
+}
+
+.quiz .question_list .question .options .option:hover {
+    background: var(--pink-100);
+}
+
+.quiz .question_list .question .options .option span {
+    /* background-color: red; */
+}
+
+
+.quiz .question_list .question .options .option input[type="radio"] {
+    appearance: none;
+    width: 16px;
+    height: 16px;
+    border: 2px solid var(--pink-700);
+    border-radius: 50%;
+
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.quiz .question_list .question .options .option input[type="radio"]:checked {
+    border: 2px solid #FFF;
 }
 
 .option.selected {
-    background: red;
+    background: var(--pink-700);
+    color: #FFF;
+    font-weight: 500;
 }
 
+.option.selected input[type="radio"]:checked::before {
+    content: '';
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: #FFF;
+}
 
-.result_btn {
+.quiz .result_btn {
+    position: relative;
+    font-weight: 600;
+    font-size: 1.1rem;
+    border-radius: 3px;
+    border: 0;
+    background: var(--pink-700);
+    color: #fff;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+
+    display: flex;
+    align-items: center;
+    /* max-width: 10rem; */
+    padding: 0 1rem;
+    height: 3rem;
+
+    transition: all .3s ease;
+
     opacity: 0.7;
     pointer-events: none;
 }
 
-.result_btn.show {
+.quiz .result_btn:hover {
+    transform: translateY(-7px);
+}
+
+.quiz .result_btn::before {
+    content: 'Preencha todas as questões para calcular o resultado';
+    position: absolute;
+    left: 0;
+    width: 200%; 
+    bottom: -1rem;
+    color: var(--pink-700);
+    font-size: 0.7rem;
+}
+
+.quiz .result_btn.show {
     opacity: 1;
     pointer-events: auto;
 }
 
+.quiz .result_btn.show::before {
+    content: '';
+}
 
+/* === Modal Result ===  */
 .result_box {
     position: fixed;
     top: 0;
@@ -212,38 +421,177 @@ main .home {
     width: 50rem;
     max-height: 70vh;
     overflow-y: auto;
-    background-color: var(--white);
     position: relative;
+
+    padding: 1.5rem;
+
+    background-color: var(--white);
+    border: none;
+    border-radius: 5px;
 
     -webkit-animation: scale-in 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940);
     animation: scale-in 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940);
                 
 }
 
-.result_box .container .btn_close {
-    position: absolute;
-    z-index: 1000;
-    background-color: dodgerblue;
-    right: 0;
-    top: -0.5rem;
+.result_box .container h3 {
+    color: var(--dark-blue);
+    font-size: 1.7rem;
+    text-align: center;
+    margin-bottom: 1.3rem;
 }
 
-.result_box .contents {
+.result_box .container .contents {
     
 }
 
 .result_box .container .contents .style_box { 
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     width: 100%;
-    height: 70vh;
+    
+    padding: 1rem 1.5rem;
+    margin-bottom: 1.5rem;
+
+    border: 2px solid var(--pink-700);
+    border-radius: 3px;
 }
 
-.result_box .container .contents .style_box .images_result img {
-    max-width: 10rem;
+.result_box .container .contents .style_box h4 {
+    color: var(--pink-700);
+    font-size: 1.5rem;
+    text-align: center;
 }
 
-/*Contact*/
+.result_box .container .contents .style_box .style_content {
+    display: flex;
+    gap: 2rem;
+}
+
+.style_box .style_content .description_result {
+    /* background: dodgerblue; */
+    width: 70%;
+
+    /* padding: 1rem 0; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.style_box .style_content .description_result div {
+    margin-bottom: 0.5rem;
+}
+
+.style_box .style_content .description_result div i {
+    color: var(--pink-700);
+}
+
+.style_box .style_content .description_result div strong {
+    color: var(--dark-blue);
+    font-size: 1.1rem;
+}
+
+
+/* === Estilização Carrosel === */
+
+.style_box .style_content .slide {
+    position: relative;
+    background: var(--pink-200);
+    border-radius: 3px;
+    padding: 5px;
+    width: 30%;
+
+    text-align: center;
+
+    overflow: hidden;
+    transition: all .4s ease;
+}
+
+.style_box .style_content .slide .slides {
+    display: flex;
+    width: 5120px;
+}
+
+.slides .image img {
+    max-height: 20rem;
+}
+
+.slides .image {
+    flex-basis: 11.6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slides .image#atual {
+    /* margin-left: 0px; */
+    transition: all .2s ease;
+    /* background: red; */
+}
+
+.slides .btn {
+    opacity: 0;
+
+    position: absolute;
+    color: #FFF;
+    padding: 0.7rem;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 1.5rem;
+    margin-top: -1.5rem;
+
+    transition: all .4s ease;
+    cursor: pointer;
+}
+
+.slides .btn:hover {
+    transform: scale(1.5);
+}
+
+.slides .btn#back {
+    top: 50%;
+    /* transform: translateY(-50%); */
+    left: 10%;
+}
+
+.slides .btn#next {
+    top: 50%;
+    /* transform: translateY(-50%); */
+    right: 10%;
+}
+
+.slide .balls {
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    bottom: 1rem;
+}
+
+.slide .balls div {
+    border: 1.5px solid #FFF;
+    padding: 3px;
+    border-radius: 50%;
+    margin-right: 15px;
+
+    cursor: pointer;
+    transition: all .5s ease;
+}
+
+.slide .balls div:hover {
+    background: #FFF;
+}
+
+.slide .balls div.img_atual {
+    background: #FFF;
+    transition: all .5s ease;
+}
+
+
+/* === Contact ===  */
 
 
 
@@ -273,6 +621,21 @@ footer {
 
 
 /* ===== Responsividade ===== */
+@media (max-width: 800px) {
+    main .home  {
+        padding: 3rem 2rem;
+    }
+
+    main .home .content {
+        flex-direction: column-reverse;
+        gap: 1rem;
+    }
+
+    .home .content .text, .home .content .image {
+        width: 100%;
+    } 
+}
+
 @media (max-width: 720px) {
     header nav .menu_mobile {
         display: block;
@@ -304,8 +667,9 @@ footer {
         text-align: center;
         width: 100%;
         padding: 1rem;
-        background: var(--pink-200);
-        color: #FFF;
+        background: var(--white);
+        color: var(--pink-700);
+        border-radius: 3px;
         font-size: 1.5rem;
     }
 
@@ -314,6 +678,25 @@ footer {
         margin-top: 0.5rem;
     }
 
-    
+
+
+    /* Modal */
+    .result_box .container .contents .style_box .style_content {
+        flex-direction: column;
+    }
+
+    .style_box h4 {
+        margin-bottom: 2rem;
+    }
+
+    .style_box .style_content .description_result {
+        width: 100%;
+    }
+
+    .style_box .style_content .slide {
+        width: 60%;
+        align-self: center;
+    }
+
 }
 
