--- a/css/style.css
+++ b/css/style.css
@@ -309,6 +309,10 @@ main .quiz {
     background: var(--pink-100);
 }
 
+.quiz .question_list .question .options .option.selected:hover {
+    background: var(--pink-700);
+}
+
 .quiz .question_list .question .options .option span {
     flex: 1;
 }
@@ -542,7 +546,72 @@ main .quiz {
 
 
 /* === Contact ===  */
+.contact {
+    
+}
 
+.contact .row {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contact .row .image img {
+    width: 50vw;
+    height: 70vh;
+}
+
+.contact .row .form-container {
+    width: 50%;
+    padding-right: 6rem;
+}
+
+.contact .row .form-container input,
+.form-container textarea, 
+.form-container button {
+    height: 2rem;
+    width: 100%;
+    background: #FFF;
+    border: none;
+    border-radius: 3px;
+
+    padding: 0 0.5rem;
+    margin: 0.5rem 0;
+
+    color: var(--pink-700);
+    font-size: 1.05rem;
+
+    transition: all 0.15s ease;
+}
+
+.contact .row .form-container input:focus, textarea:focus {
+    outline: 2px solid var(--pink-700);
+}
+
+.contact .row .form-container textarea {
+    height: 10rem;
+    padding: 0.5rem;
+    resize: none;
+}
+
+.contact .row .form-container button[type="submit"] {
+    font-weight: 600;
+    font-size: 1.1rem;
+    border-radius: 3px;
+    border: 0;
+    background: var(--pink-700);
+    color: #fff;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    
+    padding: 0 1rem;
+    height: 3rem;
+
+    transition: all .3s ease;
+}
+
+.contact .row .form-container button[type="submit"]:hover {
+    transform: translateY(-7px);
+}
 
 
 
@@ -552,6 +621,11 @@ footer {
     margin-bottom: 2rem;
     padding: 1.5rem;
     text-align: center;
+}
+
+footer p a {
+    color: var(--pink-700);
+    font-weight: 600;
 }
 
 
@@ -572,6 +646,7 @@ footer {
 
 /* ===== Responsividade ===== */
 @media (max-width: 800px) {
+    /* Home */
     main .home  {
         padding: 3rem 2rem;
     }
@@ -582,7 +657,7 @@ footer {
     }
 
     .home .content .text, .home .content .image {
-        width: 100%;
+        width: 60vw;
     } 
 }
 
@@ -649,9 +724,25 @@ footer {
         align-self: center;
     }
 
+    /* Contact */
+    .contact .row {
+        flex-direction: column;
+    }
+
+    .contact .row .image img {
+        height: 50vh;
+        width: 90vw;
+    }
+
+    .contact .row .form-container {
+        width: 90%;
+        padding: 0;
+    }
+
 }
 
 @media (max-width: 400px) {
+    /* Carrosel */
     .style_box .style_content .carrosel {
         width: 100%;
     }
