--- a/css/style.css
+++ b/css/style.css
@@ -56,12 +56,14 @@ body {
     min-height: 100vh;
     background: linear-gradient(to bottom, var(--pink-200), var(--pink-700));
 }
+
 header, main, footer {
     max-width: 1125px;
     margin: auto;
     background: var(--white);
 
 }
+
 section.home, 
 section.quiz, 
 section.contact {
@@ -115,7 +117,6 @@ header div.logo img {
 header nav {
     display: flex;
     align-items: center;
-    /* gap: 1rem; */
     position: relative;
 }
 
@@ -139,7 +140,7 @@ header nav .menu a.active {
     font-weight: 500;
 }
 
-
+/* Menu Mobile */
 header nav .menu_mobile {
     display: none;
     color: var(--pink-200);
@@ -158,10 +159,6 @@ header nav .menu_mobile.show i::before {
 
 
 /* ===== Main ===== */
-main {
-
-}
-
 main .title {
     text-align: center;
     margin-bottom: 1.5rem;
@@ -271,14 +268,6 @@ main .quiz {
 .quiz .info_box .info_list .info strong {
     color: var(--pink-700);
     font-size: 1.1rem;
-}
-
-.quiz .question_list {
-    
-}
-
-.quiz .question_list .question {
-
 }
 
 .quiz .question_list .question + .question {
@@ -439,10 +428,6 @@ main .quiz {
     margin-bottom: 1.3rem;
 }
 
-.result_box .container .contents {
-    
-}
-
 .result_box .container .contents .style_box { 
     display: flex;
     flex-direction: column;
@@ -490,7 +475,6 @@ main .quiz {
 
 
 /* === Estilização Carrosel === */
-
 .style_box .style_content .carrosel {
     position: relative;
     background: var(--pink-200);
@@ -532,12 +516,7 @@ main .quiz {
 }
 
 
-
 /* === Contact ===  */
-.contact {
-    
-}
-
 .contact .row {
     display: flex;
     align-items: center;
