Add message form

--- a/css/style.css
+++ b/css/style.css
@@ -174,10 +174,11 @@ main .home {
 .home .content {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 4rem;
 }
 
-.home .content .text {
+/* .home .content .text {
     width: 60%
 }
 
@@ -228,10 +229,11 @@ main .home {
     display: flex;
     align-items: center;
     justify-content: center;
-}
+} */
 
 .home .content .image {
-    width: 40%;
+    width: 70%;
+    text-align: center;
 }
 
 .home .content .image img {
@@ -618,16 +620,16 @@ footer p a {
         padding: 3rem 2rem;
     }
 
-    main .home .content {
+    /* main .home .content {
         flex-direction: column-reverse;
         align-items:flex-start;
         gap: 1rem;
-    }
+    } */
 
-    .home .content .text, 
+    /* .home .content .text, 
     .home .content .image {
         width: 100%;
-    }
+    } */
     
 }
 
@@ -709,6 +711,10 @@ footer p a {
         padding: 0;
     }
 
+    /* Home */
+    .home .content .image {
+        width: 100%;
+    }
 }
 
 @media (max-width: 400px) {
@@ -716,4 +722,6 @@ footer p a {
     .style_box .style_content .carrosel {
         width: 100%;
     }
+
+
 }
