--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,18 @@ html {
 
 :target {
     scroll-margin-top: 4.7em;
-  }
+}
+
+::-webkit-scrollbar {
+    background: var(--pink-100);
+    border-radius: 3px;
+    width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--dark-blue);
+    border-radius: 6px;
+}
 
 @media (max-width: 1080px) {
     html {
