--- a/css/style.css
+++ b/css/style.css
@@ -481,11 +481,10 @@ main .quiz {
     align-items: center;
     justify-content: space-between;
     padding: 0 5rem;
+    gap: 5rem;
 }
 
 .contact .row .image img {
-    /* width: 50vw; */
-    /* max-height: 70vh; */
     width: 100%;
 }
 
@@ -663,11 +662,11 @@ footer p a {
     .contact .row {
         flex-direction: column;
         padding: 0;
+        gap: 0;
     }
 
     .contact .row .image img {
-        /* height: 50vh; */
-        /* width: 90vw; */
+        
     }
 
     .contact .row .image {
