--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ html {
 }
 
 ::-webkit-scrollbar {
-    background: var(--pink-100);
+    background: #FFF;
     border-radius: 3px;
     width: 7px;
 }
